# Graphics

./: .gitignore  .gitmodules  README.md
scripts/: run.sh
src/: CMakeLists.txt
src/experiments/: EX_modelLoading.h  EX_texturedTriangle.h  texturedTriangle.h
src/private/: baseApp.cpp  camera.cpp  ebo.cpp  main.cpp  shader.cpp  texture.cpp  vao.cpp  vbo.cpp
src/public/: baseApp.h  camera.h  firstTriangle.h  game.h  modelLoader.h  objLoader.h  shader.h  texture.h  texturedTriangle.h  userInterface.h  utility.h  vao.h  vbo.h  windowCreator.h
src/shaders/: modelLoading.frag  modelLoading.vert  snake.frag  snake.vert  textured.frag  textured.vert
